--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>mobileworkbench</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
     <meta charset="UTF-8">
-    <title></title>
+    <link rel="stylesheet" href="static/css/font-icons.css">
+    <link rel="stylesheet" href="static/css/iuapmobile.um.css">
+    <link rel="stylesheet" href="static/css/islider.css">
+    <link rel="stylesheet" href="static/css/main.css">
+    <link rel="stylesheet" href="static/css/index.css">
     <script src="static/js/summer.js" ></script>
     <script src="static/js/jquery-2.1.4.min.js" ></script>
     <script src="static/js/iuapmobile.frameworks.ui.js" ></script>
